--- a/main.ipynb
+++ b/main.ipynb
@@ -516,9 +516,9 @@
                 "# criar uma pipeline de processos\n",
                 "pipe = Pipeline(steps=[('StandardScaler', StandardScaler()),\n",
                 "                       ('MinMaxScaler', MinMaxScaler()),\n",
-                "                       ('XGBClassifier', XGBClassifier(learning_rate=0.1, n_estimators=50, max_depth=3, \n",
-                "                                                        min_child_weight=1, colsample_bytree=0.5, gamma=0, \n",
-                "                                                        scale_pos_weight=4))])\n",
+                "                       ('XGBClassifier', XGBClassifier(learning_rate=0.1, n_estimators=50, max_depth=3 \n",
+                "                                                        min_child_weight=1, colsample_bytree=0.5, \n",
+                "                                                        scale_pos_weight=4))]) # gamma=0\n",
                 "\n",
                 "\n",
                 "\n",
